--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Subscriptonic</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/styles/common.css">
-    <link rel="stylesheet" href="/styles/form.css">
+
+  <!-- import the webpage's stylesheet -->
+  <link rel="stylesheet" href="/src/assets/styles/common.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
 
+
   <!-- import the webpage's javascript file -->
-  <script src="/script.js" defer></script>
+  <script type="module" src="./src/app.js"></script>
+  <script type="module" src="./src/views/components/Header.js"></script>
 </head>
+
 <body>
   <div class="app-wrapper">
+    <st-header></st-header>
+    
     <header>
       <h1>Subscrip<span>tonic</span></h1>
     </header>
